remove useless scripts

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                     </p>
                     <div class="tutors-card__course">
                         <p>Курс:</p>
-                        <p>Front-End</p><a class="tutors-card__course-link more-info-link" data-trigger="1">Відгук
+                        <p>Front-End</p><a class="tu tors-card__course-link more-info-link" data-trigger="1">Відгук
                             повністю</a>
                     </div>
                     <div class="tutors-card__tutor">
@@ -992,11 +992,6 @@
         <div class="feedback-popup__item">
             <p>Викладач:</p>
             <p>Михайло Великосельський
-                <script src="js/nice-select2.js"></script>
-                <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
-                <script src="js/popup.js">
-                </script>
-                <script src="js/script.js"></script>
             </p>
         </div>
     </div>
@@ -1020,11 +1015,6 @@
         <div class="feedback-popup__item">
             <p>Викладач:</p>
             <p>Владислав Хаус
-                <script src="js/nice-select2.js"></script>
-                <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
-                <script src="js/popup.js">
-                </script>
-                <script src="js/script.js"></script>
             </p>
         </div>
     </div>
@@ -1048,11 +1038,6 @@
         <div class="feedback-popup__item">
             <p>Викладач:</p>
             <p>Олексій Козаковський
-                <script src="js/nice-select2.js"></script>
-                <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
-                <script src="js/popup.js">
-                </script>
-                <script src="js/script.js"></script>
             </p>
         </div>
     </div>
@@ -1077,11 +1062,6 @@
         <div class="feedback-popup__item">
             <p>Викладач:</p>
             <p>Сергій Популях
-                <script src="js/nice-select2.js"></script>
-                <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
-                <script src="js/popup.js">
-                </script>
-                <script src="js/script.js"></script>
             </p>
         </div>
     </div>
@@ -1105,15 +1085,9 @@
         <div class="feedback-popup__item">
             <p>Викладач:</p>
             <p>Яна Паламарчук
-                <script src="js/nice-select2.js"></script>
-                <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
-                <script src="js/popup.js">
-                </script>
-                <script src="js/script.js"></script>
             </p>
         </div>
     </div>
 </div>
 </body>
-
 </html>
