--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                     </p>
                     <div class="tutors-card__course">
                         <p>Курс:</p>
-                        <p>Front-End</p><a class="tu tors-card__course-link more-info-link" data-trigger="1">Відгук
+                        <p>Front-End</p><a class="tutors-card__course-link more-info-link" data-trigger="1">Відгук
                             повністю</a>
                     </div>
                     <div class="tutors-card__tutor">
