change to uppercase IT

--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
         <div class="accordion__item">
           <div class="accordion__header">Яка кваліфікація у ваших викладачів?</div>
           <div class="accordion__content"><strong>Відповідь: </strong> Працюємо з викладачами, які мають практичний досвід від 1- 10 років у 
-            провідних іт- компаніях, такі як: Luxoft, Uber, GlobalLogic, Plarium, N-iX та інші.</div>
+            провідних ІТ - компаніях, такі як: Luxoft, Uber, GlobalLogic, Plarium, N-iX та інші.</div>
         </div>
         <div class="accordion__item">
           <div class="accordion__header">Як відбувається оплата?</div>
