--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
           </li>
           <li class="menu__item"><a href="about-us.html">Про нас</a>
           </li>
-          <li class="menu__item"><a href="#">Контакти</a>
+          <li class="menu__item"><a href="tutors.html">Ментори</a>
           </li>
-          <li class="menu__item"><a href="#" class="cabinet-link">Кабiнет</a>
+          <li class="menu__item"><a href="feedback.html">Відгуки</a>
           </li>
         </ul>
-        <div class="header__items"><a class="phone" href="tel:+380670000000">+380670000000</a>
-          <div class="items-wrap"><a class="action-btn btn btn_blue" href="#callback-form">Замовити дзвінок</a>
-          </div>
+        <div class="header__items">
+          <button class="btn login-btn">Вхiд</button>
+          <button class="btn signup-btn">Реєстрація</button>
         </div>
       </menu>
     </div>
@@ -53,16 +53,16 @@
         </li>
         <li class="menu__item"><a href="about-us.html">Про нас</a>
         </li>
-        <li class="menu__item"><a href="#">Контакти </a>
+        <li class="menu__item"><a href="tutors.html">Ментори</a>
         </li>
-        <li class="menu__item"><a href="#" class="cabinet-link">Кабiнет</a>
+        <li class="menu__item"><a href="feedback.html">Відгуки</a>
         </li>
       </ul>
     </div>
   </header>
   <div class="slider">
     <div class="slide">
-      <h1 class="title">N-CODE <span class="title_small">Місце зустрічі з твоїм ментором</span></h1>
+      <h1 class="title"> <span class="logo-title">N-CODE</span> - Місце зустрічі з твоїм ментором</h1>
     </div>
   </div>
   <div class="content-container">
