change header in all pages

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           </li>
         </ul>
         <div class="header__items">
-          <button class="btn login-btn">Вхiд</button>
-          <button class="btn signup-btn">Реєстрація</button>
+          <a class="btn login-btn">Вхiд</a>
+          <a class="btn signup-btn">Реєстрація</a>
         </div>
       </menu>
     </div>
