--- a/about-us.html
+++ b/about-us.html
@@ -36,14 +36,14 @@
                   </li>
                   <li class="menu__item"><a href="about-us.html">Про нас</a>
                   </li>
-                  <li class="menu__item"><a href="#">Контакти</a>
+                  <li class="menu__item"><a href="tutors.html">Ментори</a>
                   </li>
-                  <li class="menu__item"><a href="#" class="cabinet-link">Кабiнет</a>
+                  <li class="menu__item"><a href="feedback.html">Відгуки</a>
                   </li>
                 </ul>
-                <div class="header__items"><a class="phone" href="tel:+380670000000">+380670000000</a>
-                  <div class="items-wrap"><a class="action-btn btn btn_blue" href="#callback-form">Замовити дзвінок</a>
-                  </div>
+                <div class="header__items">
+                  <a class="btn login-btn">Вхiд</a>
+                  <a class="btn signup-btn">Реєстрація</a>
                 </div>
               </menu>
             </div>
@@ -53,9 +53,9 @@
                 </li>
                 <li class="menu__item"><a href="about-us.html">Про нас</a>
                 </li>
-                <li class="menu__item"><a href="#">Контакти </a>
+                <li class="menu__item"><a href="tutors.html">Ментори</a>
                 </li>
-                <li class="menu__item"><a href="#" class="cabinet-link">Кабiнет</a>
+                <li class="menu__item"><a href="feedback.html">Відгуки</a>
                 </li>
               </ul>
             </div>
