--- a/feedback.html
+++ b/feedback.html
@@ -20,46 +20,45 @@
     <div class="content-container feedback-page feedback cards-page">
         <header class="header" id="header">
             <div class="container">
-                <div class="logo">
-                    <a href="index.html">
-                        <img src="img/logo.svg" alt="logo">
-                    </a>
+              <div class="logo">
+                <a href="index.html">
+                  <img src="img/logo.svg" alt="logo">
+                </a>
+              </div>
+              <menu class="menu">
+                <div class="hamburger-menu">
+                  <div class="hamburger"><span> </span>
+                  </div>
                 </div>
-                <menu class="menu">
-                    <div class="hamburger-menu">
-                        <div class="hamburger"><span> </span>
-                        </div>
-                    </div>
-                    <ul class="menu__nav">
-                        <li class="menu__item"><a href="index.html">Головна</a>
-                        </li>
-                        <li class="menu__item"><a href="#">Про нас</a>
-                        </li>
-                        <li class="menu__item"><a href="#">Контакти</a>
-                        </li>
-                        <li class="menu__item"><a href="#">Кабiнет</a>
-                        </li>
-                    </ul>
-                    <div class="header__items"><a class="phone" href="tel:+380670000000">+380670000000</a>
-                        <div class="items-wrap"><a class="action-btn btn btn_blue" href="#callback-form">Замовити
-                                дзвінок</a>
-                        </div>
-                    </div>
-                </menu>
+                <ul class="menu__nav">
+                  <li class="menu__item"><a href="index.html">Головна</a>
+                  </li>
+                  <li class="menu__item"><a href="about-us.html">Про нас</a>
+                  </li>
+                  <li class="menu__item"><a href="tutors.html">Ментори</a>
+                  </li>
+                  <li class="menu__item"><a href="feedback.html">Відгуки</a>
+                  </li>
+                </ul>
+                <div class="header__items">
+                  <a class="btn login-btn">Вхiд</a>
+                  <a class="btn signup-btn">Реєстрація</a>
+                </div>
+              </menu>
             </div>
             <div class="mob-menu">
-                <ul class="menu__nav">
-                    <li class="menu__item"><a href="/">Головна</a>
-                    </li>
-                    <li class="menu__item"><a href="#">Про нас</a>
-                    </li>
-                    <li class="menu__item"><a href="#">Контакти </a>
-                    </li>
-                    <li class="menu__item"><a href="#">Кабiнет</a>
-                    </li>
-                </ul>
+              <ul class="menu__nav">
+                <li class="menu__item"><a href="#">Головна</a>
+                </li>
+                <li class="menu__item"><a href="about-us.html">Про нас</a>
+                </li>
+                <li class="menu__item"><a href="tutors.html">Ментори</a>
+                </li>
+                <li class="menu__item"><a href="feedback.html">Відгуки</a>
+                </li>
+              </ul>
             </div>
-        </header>
+          </header>
         <div class="section-title-wrap"><a class="back-link" href="index.html">Назад</a>
             <h2 class="section-title">Всi вiдгуки</h2>
         </div>
