--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="css/became-mentor-popup.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/mentor-info-popup.css" />
+
+    <!-- Slider -->
+    <link rel="stylesheet" href="assets/itc-slider.css">
   </head>
   <title>N-Code</title>
 
@@ -372,64 +375,81 @@
       </section>
       <section class="roadmap">
         <h2 class="section-title">ЯК СТАТИ КРУТИМ РОЗРОБНИКОМ?</h2>
-        <div class="roadmap__wrap">
-          <div class="roadmap-step">
-            <div class="roadmap-step__item active">
-              <div class="roadmap-step__item-img">
-                <img src="./img/step_1-ico.svg" alt="" />
+        <div class="itc-slider" data-slider="itc-slider">
+          <div class="itc-slider-wrapper">
+            <div class="itc-slider-items">
+              <div class="itc-slider-item">
+                <p class="slider-step">Крок 1</p>
+                <p class="slider-title">Заповнити заявку</p>
+                <p class="slider-text">Залишити заявку у формі зворотнього зв’язку чи подзвонити 067 000 00 00</p>
               </div>
-              <p>Крок 1</p>
-              <p>Заповнити заявку</p>
-            </div>
-            <div class="roadmap-step__item">
-              <div class="roadmap-step__item-img">
-                <img src="./img/step_2-ico.svg" alt="" />
+              <div class="itc-slider-item">
+                <p class="slider-step">Крок 2</p>
+                <p class="slider-title">Зв’язок з менеджером</p>
+                <p class="slider-text">На даному етапі менеджер допомагає підібрати ментора в залежності від рівня знань студента 
+                  та кваліфікації ментора. Менеджер платформи N-Code узгоджує зі студентом та ментором вільну дату та час для 
+                  проведення пробного 30 хвилинного онлайн-заняття.
+                  ‌</p>
               </div>
-              <p>Крок 2</p>
-              <p>Зв’язок з менеджером</p>
-            </div>
-            <div class="roadmap-step__item">
-              <div class="roadmap-step__item-img">
-                <img src="./img/step_3-ico.svg" alt="" />
+              <div class="itc-slider-item">
+                <p class="slider-step">Крок 3</p>
+                <p class="slider-title">Тестування</p>
+                <p class="slider-text">Пройти 30 хвилинне онлайн-тестування напряму з репетитором
+                  На даному етапі ментор (репетитор) проводить тестування рівня знань студента, надає рекомендації та 
+                  консультує щодо подальших уроків.</p>
               </div>
-              <p>Крок 3</p>
-              <p>Тестування</p>
-            </div>
-            <div class="roadmap-step__item">
-              <div class="roadmap-step__item-img">
-                <img src="./img/step_4-ico.svg" alt="" />
+              <div class="itc-slider-item">
+                <p class="slider-step">Крок 4</p>
+                <p class="slider-title">Реєстрація</p>
+                <p class="slider-text">Студент може самостійно обирати дату та час заняття з ментором у власному онлайн-кабінеті.</p>
               </div>
-              <p>Крок 4</p>
-              <p>Реєстрація в онлайн кабінеті</p>
+              <div class="itc-slider-item">
+                <p class="slider-step">Крок 5</p>
+                <p class="slider-title">Оплата</p>
+                <p class="slider-text">Оплата здійснюється через особистий онлайн-кабінет студента, 
+                  в якому фіксуються всі надходження та списання коштів за проведені заняття.</p>
+              </div>
+              <div class="itc-slider-item">
+                <p class="slider-step">Крок 6</p>
+                <p class="slider-title">Підготовка до роботи</p>
+                <p class="slider-text">Отримати рекомендаційний лист + шаблон резюме для програміста. Ментор з онлайн-платформи 
+                  N-Code за потреби може надати рекомендаційний лист про отримані знання та навички студента
+                </p>
+              </div>
+              <div class="itc-slider-item">
+                <p class="slider-step">Крок 7</p>
+                <p class="slider-title">Знайти роботу мрії</p>
+                <p class="slider-text">Найкращим студентам допомагаємо з працевлаштуванням/ 
+                  рекомендуємо IT-компаніям / допомагаємо знайти перше замовлення / беремо в свою команду розробників</p>
+              </div>
+              <div class="itc-slider-item">
+                <p class="slider-step">Крок 8</p>
+                <p class="slider-title">Працевлаштування</p>
+                <p class="slider-text">Команда N-Code також допомагає розробникам у їх перші дні роботи, розібратись з отриманими завданнями 
+                  та якісно виконати свою роботу. 
+                  Онлайн-кабінет студента діє на постійній основі, доти, доки студенту потрібна поміч репетитора.</p>
+              </div>
             </div>
           </div>
-          <div class="roadmap-step-info">
-            <div class="roadmap-step-info__item active">
-              <p>Залишити заявку у формі зворотнього зв’язку чи подзвонити 067 000 00 00</p>
-              <p></p>
-            </div>
-            <div class="roadmap-step-info__item">
-              <p>Отримати консультацію у менеджера та записатись на безкоштовне пробне заняття.</p>
-              <p>
-                На даному етапі менеджер допомагає підібрати ментора в залежності від рівня знань студента та кваліфікації ментора. Менеджер
-                платформи N-Code узгоджує зі студентом та ментором вільну дату та час для проведення пробного 30-ти хвилинного
-                онлайн-заняття.
-              </p>
-            </div>
-            <div class="roadmap-step-info__item">
-              <p>Пройти 30-ти хвилинне онлайн-тестування напряму з репетитором</p>
-              <p>
-                На даному етапі ментор (репетитор) проводить тестування рівня знань студента, надає рекомендації  та консультує щодо
-                подальших уроків.
-              </p>
-            </div>
-            <div class="roadmap-step-info__item">
-              <p>Приєднатись до онлайн-кабінету платформи N-Code</p>
-              <p>Студент може самостійно обирати дату та час заняття з ментором у власному онлайн-кабінеті.</p>
-            </div>
-          </div>
+    
+          <ol class="itc-slider-indicators">
+            <!-- data-slide-to="0" – для перехода к 1 слайду -->
+            <li class="itc-slider-indicator" data-slide-to="0"></li>
+            <!-- data-slide-to="1" – для перехода к 2 слайду -->
+            <li class="itc-slider-indicator" data-slide-to="2"></li>
+            <!-- data-slide-to="2" – для перехода к 3 слайду -->
+            <li class="itc-slider-indicator" data-slide-to="2"></li>
+            <li class="itc-slider-indicator" data-slide-to="3"></li>
+            <li class="itc-slider-indicator" data-slide-to="4"></li>
+            <li class="itc-slider-indicator" data-slide-to="5"></li>
+            <li class="itc-slider-indicator" data-slide-to="6"></li>
+            <li class="itc-slider-indicator" data-slide-to="7"></li>
+  
+          </ol>
+    
+          <button class="itc-slider-btn itc-slider-btn-prev"></button>
+          <button class="itc-slider-btn itc-slider-btn-next"></button>
         </div>
-        <a class="btn" href="#">Записатись на пробне заняття</a>
       </section>
       <section class="salary">
         <h2 class="section-title">Кар’eрне зростання у front-END</h2>
@@ -1070,5 +1090,8 @@
     <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
     <script src="js/popup.js"></script>
+
+    <!-- Slider -->
+    <script src="assets/itc-slider.js"></script>
   </body>
 </html>
