added scroll to callback form and remove useless btn

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <h2>Впізнаєте в цих питаннях себе?</h2>
               <p class="consult__sub-title">Якщо так, допоможемо знайти перевіреного репетитора з програмування для Вас чи вашої дитини</p>
             </div>
-            <a class="consult__btn btn" href="#">Отримати консультацію менеджера</a>
+            <a class="consult__btn btn" href="#callback-section">Отримати консультацію менеджера</a>
           </div>
           <div class="col">
             <ul class="consult__list">
@@ -371,7 +371,7 @@
             <p>Стати ментором</p>
           </div>
         </div>
-        <a class="btn" href="#">Записатись на пробне заняття</a>
+        <a class="btn" href="#callback-section">Записатись на пробне заняття</a>
       </section>
       <section class="roadmap">
         <h2 class="section-title">ЯК СТАТИ КРУТИМ РОЗРОБНИКОМ?</h2>
@@ -501,7 +501,7 @@
           </div>
           <div class="salary__line"></div>
         </div>
-        <a class="btn" href="#">Записатись на пробне заняття</a>
+        <a class="btn" href="#callback-section">Записатись на пробне заняття</a>
       </section>
       <section class="feedback">
         <div class="section-title-wrap">
@@ -653,9 +653,6 @@
           </div>
         </div>
         <a class="mob_btn btn" href="#">Дивитись всі відгуки</a>
-        <div class="btn-wrap">
-          <a class="btn_light btn" href="#">Замовити сертифікат</a><a class="btn" href="#">Отримати консультацію менеджера</a>
-        </div>
       </section>
       <section class="faq">
         <h2 class="section-title">Питання i вiдповiдi</h2>
@@ -714,8 +711,9 @@
           </div>
         </div>
       </section>
-      <section class="callback-form" id="callback-form">
-        <div class="section-title">Зворотнiй зв’язок</div>
+      <span class="anchor" id="callback-section"></span>
+      <section class="callback-form">
+        <div class="section-title">Зворотній зв’язок</div>
         <form class="form" action="POST" id="callbackForm">
           <label class="required" for="name">
             <input type="text" name="name" placeholder="Ім’я" required="true" />
