--- a/feedback.html
+++ b/feedback.html
@@ -213,122 +213,70 @@
     </div>
     <footer class="footer">
         <div class="content-container">
-            <div class="row">
-                <div class="col">
-                    <p class="footer__title">Хочете, щоб з вами зв’язались?</p><a class="btn_blue footer__btn btn"
-                        href="#">залишити заявку</a>
-                    <div class="btn-wrap"><a class="btn_blue footer__btn btn" href="#">Стати МЕНТОРОМ</a><a
-                            class="btn_blue footer__btn action-btn give-feedback btn" href="#">ЗАЛИШИТИ ВІДГУК</a>
-                    </div>
-                    <div class="footer__sup-pay">
-                        <p>Підтримка платежів</p>
-                        <div class="pay-ico">
-                            <img src="img/mastercard-ico.svg" alt="">
-                        </div>
-                        <div class="pay-ico">
-                            <img src="img/visa-ico.svg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <p class="footer__title">Школа
-                        <ul class="footer__list">
-                            <li><a href="index.html">Про нас</a>
-                            </li>
-                            <li><a href="tutors.html">Викладачі</a>
-                            </li>
-                            <li><a href="feedback.html">Відгуки</a>
-                            </li>
-                            <li><a href="">Питання і відповіді</a>
-                            </li>
-                            <li><a href="">Контакти</a>
-                            </li>
-                        </ul>
-                    </p>
-                </div>
-                <div class="col">
-                    <p class="footer__title">Соціальні мережі</p>
-                    <div class="footer__social">
-                        <a class="social-ico" href="">
-                            <img src="img/fb-ico.svg" alt="">
-                        </a>
-                        <a class="social-ico" href="">
-                            <img src="img/Instagram-ico.svg" alt="">
-                        </a>
-                        <a class="social-ico" href="">
-                            <img src="img/YouTube-ico.svg" alt="">
-                        </a>
-                        <a class="social-ico" href="">
-                            <img src="img/tg-ico.svg" alt="">
-                        </a>
-                        <a class="social-ico" href="">
-                            <img src="img/li-ico.svg" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="btn-wrap"><a class="action-btn became-tutor btn_blue footer__btn btn" href="#">Стати
-                            МЕНТОРОМ</a><a class="btn_blue footer__btn action-btn give-feedback btn" href="#">ЗАЛИШИТИ
-                            ВІДГУК</a>
-                    </div>
-                </div>
+          <div class="row">
+            <div class="col logo-desktop">
+              <a href="index.html">
+                <img class="footer__logo" src="img/logo.svg" alt="logo" />
+              </a>
             </div>
-            <div class="footer__copyright">
-                <p>&#169; Компанія N-CODE 2023</p>
+            <div class="col">
+              <p class="footer__title">N-Code</p>
+              <ul class="footer__list">
+                <li><a href="about-us.html">Про нас</a></li>
+                <li><a href="tutors.html">Викладачі</a></li>
+                <li><a href="feedback.html">Відгуки</a></li>
+              </ul>
             </div>
+            <div class="col">
+              <p class="footer__title">Контакти</p>
+              <ul class="footer__list">
+                <li><a href="mailto:ncode.study@gmail.com">ncode.study@gmail.com</a></li>
+                <li><a href="tel:380686272727">+38 (068)-627-27-27</a></li>
+              </ul>
+            </div>
+            <div class="col">
+              <p class="footer__title">Співробітництво</p>
+              <button class="btn footer__btn">Стати ментором</button>
+            </div>
+          </div>
+          <div class="footer__social">
+            <a class="social-ico" href="https://instagram.com/ncode.study?igshid=MzRlODBiNWFlZA==" target="_blank">
+              <svg width="32" height="32" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M14.5 0.25H5.5C4.10807 0.251489 2.77358 0.805091 1.78933 1.78933C0.805091 2.77358 0.251489 4.10807 0.25 5.5V14.5C0.251489 15.8919 0.805091 17.2264 1.78933 18.2107C2.77358 19.1949 4.10807 19.7485 5.5 19.75H14.5C15.8919 19.7485 17.2264 19.1949 18.2107 18.2107C19.1949 17.2264 19.7485 15.8919 19.75 14.5V5.5C19.7485 4.10807 19.1949 2.77358 18.2107 1.78933C17.2264 0.805091 15.8919 0.251489 14.5 0.25ZM10 14.5C9.10998 14.5 8.23995 14.2361 7.49993 13.7416C6.75991 13.2471 6.18314 12.5443 5.84254 11.7221C5.50195 10.8998 5.41283 9.99501 5.58647 9.12209C5.7601 8.24918 6.18868 7.44736 6.81802 6.81802C7.44736 6.18868 8.24918 5.7601 9.12209 5.58647C9.99501 5.41283 10.8998 5.50195 11.7221 5.84254C12.5443 6.18314 13.2471 6.75991 13.7416 7.49993C14.2361 8.23995 14.5 9.10998 14.5 10C14.4988 11.1931 14.0243 12.337 13.1806 13.1806C12.337 14.0243 11.1931 14.4988 10 14.5ZM15.625 5.5C15.4025 5.5 15.185 5.43402 15 5.3104C14.815 5.18679 14.6708 5.01109 14.5856 4.80552C14.5005 4.59995 14.4782 4.37375 14.5216 4.15552C14.565 3.93729 14.6722 3.73684 14.8295 3.5795C14.9868 3.42217 15.1873 3.31502 15.4055 3.27162C15.6238 3.22821 15.85 3.25049 16.0555 3.33564C16.2611 3.42078 16.4368 3.56498 16.5604 3.74998C16.684 3.93499 16.75 4.1525 16.75 4.375C16.75 4.67337 16.6315 4.95952 16.4205 5.1705C16.2095 5.38147 15.9234 5.5 15.625 5.5ZM13 10C13 10.5933 12.8241 11.1734 12.4944 11.6667C12.1648 12.1601 11.6962 12.5446 11.1481 12.7716C10.5999 12.9987 9.99667 13.0581 9.41473 12.9424C8.83279 12.8266 8.29824 12.5409 7.87868 12.1213C7.45912 11.7018 7.1734 11.1672 7.05764 10.5853C6.94189 10.0033 7.0013 9.40013 7.22836 8.85195C7.45542 8.30377 7.83994 7.83524 8.33329 7.50559C8.82664 7.17595 9.40666 7 10 7C10.7956 7 11.5587 7.31607 12.1213 7.87868C12.6839 8.44129 13 9.20435 13 10Z"
+                  fill="black"
+                />
+              </svg>
+            </a>
+            <a class="social-ico" href="https://www.facebook.com/ncode.study" target="_blank">
+              <svg width="32" height="32" viewBox="0 0 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M21.8751 10.9377C21.8751 9.74298 21.9008 7.8956 21.9289 6.00022C21.978 2.68667 19.3134 0.000163861 15.9995 0.000199078C14.2228 0.000217959 12.4156 0.000219345 10.9376 0.000219345C9.6018 0.000219345 7.8235 0.000219345 6.00005 0.000219345C2.68638 0.000219345 -8.3135e-06 2.68651 3.38375e-05 6.00017C5.64166e-05 7.77521 8.19844e-05 9.52812 8.19844e-05 10.9377C8.19844e-05 12.0625 7.15326e-05 13.5196 5.8018e-05 14.9999C2.7765e-05 18.3136 2.68642 21 6.00015 21C7.15209 21 8.20278 21 9.2286 21V14.1003H6.45077V10.9377H9.2286V8.52805C9.2286 5.78733 10.8619 4.27219 13.3599 4.27219C14.5567 4.27219 15.8087 4.48606 15.8087 4.48606V7.17795H14.4288C13.0709 7.17795 12.6461 8.02073 12.6461 8.88694V10.9377H15.6793L15.1949 14.1003H12.6466V21C13.6864 21 14.8287 21 15.9999 21C19.3136 21 21.9801 18.3135 21.9234 15.0002C21.8975 13.4883 21.8751 12.0551 21.8751 10.9377Z"
+                  fill="black"
+                />
+              </svg>
+            </a>
+            <a class="social-ico" href="https://t.me/olli_kim" target="_blank">
+              <svg width="32" height="32" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M10.5001 -0.000311494C8.42335 -0.000311494 8.4806 -0.000173129 6 -0.000225283C2.68654 0.000583579 0.000109323 2.68613 0.000109475 5.99959C0.0001096 8.72236 0.000105837 11.5159 0.000218958 12.6018C0.000210833 13.2559 0.00021648 14.0948 0.000225864 14.9991C0.000260252 18.313 2.68731 21 6.00115 21C6.97223 21 7.85179 21 8.50005 21C10.5001 21 12.8348 21 14.9174 21C14.945 21 14.9726 21 15.0001 21C18.3138 21 21.0001 18.3134 21.0001 14.9997C21.0001 13.16 21.0001 11.4266 21.0001 10.4997C21.0001 9.12081 21.0001 7.99983 21.0001 6.48151C21.0001 6.33739 21.0001 6.17574 21.0001 5.99991C21.0001 2.68637 18.3136 0.000457692 15.0001 -0.000281453C13.8391 -0.000540435 11.8789 -0.000311494 10.5001 -0.000311494ZM13.8391 15.9093C13.7999 16.0074 13.7401 16.096 13.6639 16.1691C13.5876 16.2421 13.4966 16.2981 13.397 16.3331C13.2973 16.3681 13.1913 16.3814 13.0861 16.372C12.9809 16.3627 12.8789 16.3309 12.787 16.2789L9.9362 14.0634L8.10711 15.7518C8.06465 15.7831 8.015 15.8033 7.96271 15.8105C7.91042 15.8176 7.85717 15.8115 7.80785 15.7927L8.15856 12.6543L8.16905 12.6637L8.1764 12.6018C8.1764 12.6018 13.3057 7.93139 13.5146 7.73294C13.7267 7.53449 13.6564 7.49144 13.6564 7.49144C13.669 7.24994 13.2773 7.49144 13.2773 7.49144L6.48066 11.8636L3.65091 10.8997C3.65091 10.8997 3.21621 10.7443 3.17526 10.401C3.13221 10.0608 3.66456 9.87599 3.66456 9.87599L14.9174 5.40509C14.9174 5.40509 15.8425 4.99349 15.8425 5.67599L13.8391 15.9093Z"
+                  fill="black"
+                />
+              </svg>
+            </a>
+          </div>
+          <div class="footer__copyright">
+            <p>&#169; Компанія N-CODE 2023</p>
+          </div>
+          <div class="col logo-mobile">
+            <a href="index.html">
+              <img class="footer__logo" src="img/logo.svg" alt="logo" />
+            </a>
+          </div>
         </div>
-    </footer>
-    <footer class="footer__mob">
-        <div class="content-container">
-            <div class="footer__mob-top">
-                <p class="footer__title">Школа
-                    <ul class="footer__list">
-                        <li><a href="index.html">Про нас</a>
-                        </li>
-                        <li><a href="tutors.html">Викладачі</a>
-                        </li>
-                        <li><a href="feedback.html">Відгуки</a>
-                        </li>
-                        <li><a href="">Питання і відповіді</a>
-                        </li>
-                        <li><a href="">Контакти</a>
-                        </li>
-                    </ul>
-                </p>
-            </div>
-            <div class="footer__mob-bottom">
-                <div class="footer__sup-pay">
-                    <p>Підтримка платежів</p>
-                    <div class="pay-ico">
-                        <img src="img/mastercard-ico.svg" alt="">
-                    </div>
-                    <div class="pay-ico">
-                        <img src="img/visa-ico.svg" alt="">
-                    </div>
-                </div>
-                <div class="footer__social">
-                    <a class="social-ico" href="">
-                        <img src="img/fb-ico.svg" alt="">
-                    </a>
-                    <a class="social-ico" href="">
-                        <img src="img/Instagram-ico.svg" alt="">
-                    </a>
-                    <a class="social-ico" href="">
-                        <img src="img/YouTube-ico.svg" alt="">
-                    </a>
-                    <a class="social-ico" href="">
-                        <img src="img/tg-ico.svg" alt="">
-                    </a>
-                    <a class="social-ico" href="">
-                        <img src="img/li-ico.svg" alt="">
-                    </a>
-                </div>
-                <div class="footer__copyright">
-                    <p>&#169; Компанія N-CODE 2023</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+      </footer>
     <div class="popup give-feedback-popup popap-templ">
         <div class="popup-body">
             <div class="popup__close"></div>
