--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <div class="slider">
       <div class="slide">
         <h1 class="title"><span class="logo-title">N-CODE</span> - Місце зустрічі з твоїм ментором</h1>
+        <a class="btn slide__btn" href="#callback-section">Замовити консультацію</a>
       </div>
     </div>
     <div class="content-container">
