--- a/about-us.html
+++ b/about-us.html
@@ -9,13 +9,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/nice-select2.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/popap-templ.css">
+    <link rel="stylesheet" href="css/nice-select2.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/feedback-page.css" />
+    <link rel="stylesheet" href="css/popap-templ.css" />
+    <link rel="stylesheet" href="css/became-mentor-popup.css" />
     <link rel="stylesheet" href="css/about-us.css">
 
+    <title>N-Code</title>
 </head>
-<title>N-Code</title>
 
 <body>
     <div class="content-container abous-us">
@@ -136,7 +138,7 @@
             </div>
             <div class="col">
               <p class="footer__title">Співробітництво</p>
-              <button class="btn footer__btn">Стати ментором</button>
+              <button class="btn footer__btn became-mentor">Стати ментором</button>
             </div>
           </div>
           <div class="footer__social">
@@ -177,49 +179,39 @@
           </div>
         </div>
       </footer>
-    <div class="popup give-feedback-popup popap-templ">
-        <div class="popup-body">
-            <div class="popup__close"></div>
-            <h2 class="popup__title">ЗАЛИШИТИ ВІДГУК</h2><a class="back-link">Назад </a>
-            <form class="form" action="POST" id="feedbackForm">
-                <label class="required" for="name">
-                    <input type="text" name="name" placeholder="Ім’я" required>
-                </label>
-                <label class="required" for="phone">
-                    <input type="phone" name="phone" placeholder="Номер телефона" required>
-                </label>
-                <label class="required" for="email">
-                    <input type="email" name="email" placeholder="E-mail" required>
-                </label>
-                <select class="select-course custom-select custom-select-required" name="course" id="courseFeed">
-                    <option value=""></option>
-                    <option value="HTML">HTML</option>
-                    <option value="CSS">CSS</option>
-                    <option value="JS">JS</option>
-                </select>
-                <select class="custom-select custom-select-required" name="tutor" id="tutor">
-                    <option value=""></option>
-                    <option value="Иван Иваненко">Иван Иваненко</option>
-                    <option value="Петр Петренко">Петр Петренко</option>
-                    <option value="Светлана Светленко">Светлана Светленко</option>
-                </select>
-                <div class="form-rate required">
-                    <div class="tutors-card__rate" data-stars="1"><i class="mentors__star fa-solid fa-star"></i><i
-                            class="mentors__star fa-regular fa-star"></i><i
-                            class="mentors__star fa-regular fa-star"></i><i
-                            class="mentors__star fa-regular fa-star"></i><i
-                            class="mentors__star fa-regular fa-star"></i>
-                    </div>
-                </div>
-                <label class="required" for="social">
-                    <input type="" name="social" placeholder="Соціальна мережа" required>
-                </label>
-                <textarea name="comment" placeholder="Повідомлення"></textarea>
-                <div class="from__btn">
-                    <button class="btn" type="submit">Надіслати ЗАЯВКУ</button>
-                </div>
-            </form>
+    <div class="popup popap-templ became-mentor-popup">
+      <div class="popup-body">
+        <div class="popup__close"></div>
+        <div class="popup__title-group">
+          <h2 class="popup__title">Стати ментором</h2>
+          <p class="popup__sub-title">Залиште ваші контактні дані, і ми вам обов'язково зателефонуємо!</p>
         </div>
+        <a class="back-link">Назад </a>
+        <form class="form" action="POST" id="feedbackForm">
+          <label class="required" for="name">
+            <input type="text" name="name" placeholder="Ім’я та Прізвище" required="required" />
+          </label>
+          <label class="required" for="phone">
+            <input type="phone" name="phone" placeholder="Номер телефону" required="required" />
+          </label>
+          <label class="required" for="email">
+            <input type="email" name="email" placeholder="E-mail" required="required" />
+          </label>
+          <div class="input-wrapper">
+            <label class="required file-upload" for="file">
+              <span class="placeholder">Прикріпити файл з резюме</span>
+              <input id="file" class="file" type="file" name="file" accept=".pdf" required="required" />
+            </label>
+            <label class="required" for="linkedIn">
+              <input type="text" name="linkedIn" placeholder="LinkedIn" required="required" />
+            </label>
+          </div>
+          <textarea name="comment" placeholder="Коментар (не обов’язково)"></textarea>
+          <div class="form__btn">
+            <button class="btn" type="submit">Надіслати заявку</button>
+          </div>
+        </form>
+      </div>
     </div>
     <script src="js/nice-select2.js"></script>
     <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
