added mentors layout

--- a/index.html
+++ b/index.html
@@ -228,30 +228,30 @@
       </section>
       <section class="tutors">
         <div class="section-title-wrap">
-          <h2 class="section-title">ТОП МЕНТОРiВ/РЕПЕТИТОРIВ</h2>
+          <h2 class="section-title">Наші репетитори</h2>
           <a class="more-info-link" href="tutors.html">Всі ментори</a>
         </div>
         <div class="tutors-card__wrap">
           <div class="tutors-card">
             <div class="tutors-card__top">
               <div class="tutors-card__img">
-                <img src="img//tutors-img.svg" alt="tutor" />
+                <img src="img/tutors/misha.png" alt="tutor" />
               </div>
-              <p class="tutors-card__name">Им’я Прізвище</p>
+              <p class="tutors-card__name">Михайло</p>
               <div class="tutors-card__rate">
-                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i>
+                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i>
               </div>
             </div>
             <div class="container">
               <div class="tutors-card__info">
                 <p class="tutors-card__description">
-                  Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ
+                  Досвід в IT понад 25 років. Конкретно програмування - більш як 8 років. Саме Web...
                 </p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
-                  <p>Назва курсу</p>
+                  <p>Front-End</p>
                   <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
                 </div>
               </div>
@@ -260,23 +260,23 @@
           <div class="tutors-card">
             <div class="tutors-card__top">
               <div class="tutors-card__img">
-                <img src="img//tutors-img.svg" alt="tutor" />
+                <img src="img/tutors/andriy_kl.jpeg" alt="tutor" />
               </div>
-              <p class="tutors-card__name">Им’я Прізвище</p>
+              <p class="tutors-card__name">Андрій</p>
               <div class="tutors-card__rate">
-                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i>
+                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i>
               </div>
             </div>
             <div class="container">
               <div class="tutors-card__info">
                 <p class="tutors-card__description">
-                  Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ
+                  Професійний викладач (постійна робота у закладі вищої освіти) к.т.н.
                 </p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
-                  <p>Назва курсу</p>
+                  <p>Front-End</p>
                   <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
                 </div>
               </div>
@@ -285,23 +285,23 @@
           <div class="tutors-card">
             <div class="tutors-card__top">
               <div class="tutors-card__img">
-                <img src="img//tutors-img.svg" alt="tutor" />
+                <img src="img/tutors/andriy_gum.jpeg" alt="tutor" />
               </div>
-              <p class="tutors-card__name">Им’я Прізвище</p>
+              <p class="tutors-card__name">Андрій</p>
               <div class="tutors-card__rate">
-                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i>
+                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i>
               </div>
             </div>
             <div class="container">
               <div class="tutors-card__info">
                 <p class="tutors-card__description">
-                  Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ
+                  Досвід на фрілансі близько 3-5 місяців. Зараз понад рік працює у...
                 </p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
-                  <p>Назва курсу</p>
+                  <p>Front-End</p>
                   <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
                 </div>
               </div>
@@ -310,23 +310,23 @@
           <div class="tutors-card">
             <div class="tutors-card__top">
               <div class="tutors-card__img">
-                <img src="img//tutors-img.svg" alt="tutor" />
+                <img src="img/tutors/vlad.jpeg" alt="tutor" />
               </div>
-              <p class="tutors-card__name">Им’я Прізвище</p>
+              <p class="tutors-card__name">Владислав</p>
               <div class="tutors-card__rate">
-                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i>
+                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i>
               </div>
             </div>
             <div class="container">
               <div class="tutors-card__info">
                 <p class="tutors-card__description">
-                  Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ
+                  3 роки працює розробником та 6 місяців викладає
                 </p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
-                  <p>Назва курсу</p>
+                  <p>Front-End</p>
                   <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
                 </div>
               </div>
@@ -335,23 +335,23 @@
           <div class="tutors-card">
             <div class="tutors-card__top">
               <div class="tutors-card__img">
-                <img src="img//tutors-img.svg" alt="tutor" />
+                <img src="img/tutors/sergiy_m.jpeg" alt="tutor" />
               </div>
-              <p class="tutors-card__name">Им’я Прізвище</p>
+              <p class="tutors-card__name">Сергій</p>
               <div class="tutors-card__rate">
-                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i>
+                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i>
               </div>
             </div>
             <div class="container">
               <div class="tutors-card__info">
                 <p class="tutors-card__description">
-                  Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ
+                  1.5 років комерційного досвіду
                 </p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
-                  <p>Назва курсу</p>
+                  <p>Front-End</p>
                   <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
                 </div>
               </div>
@@ -360,23 +360,23 @@
           <div class="tutors-card">
             <div class="tutors-card__top">
               <div class="tutors-card__img">
-                <img src="img//tutors-img.svg" alt="tutor" />
+                <img src="img/tutors/andriy_gr.jpeg" alt="tutor" />
               </div>
-              <p class="tutors-card__name">Им’я Прізвище</p>
+              <p class="tutors-card__name">Андрій</p>
               <div class="tutors-card__rate">
-                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i>
+                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i>
               </div>
             </div>
             <div class="container">
               <div class="tutors-card__info">
                 <p class="tutors-card__description">
-                  Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ
+                  2 роки комерційного досвіду 
                 </p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
-                  <p>Назва курсу</p>
+                  <p>Front-End</p>
                   <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
                 </div>
               </div>
@@ -385,33 +385,52 @@
           <div class="tutors-card">
             <div class="tutors-card__top">
               <div class="tutors-card__img">
-                <img src="img//tutors-img.svg" alt="tutor" />
+                <img src="img/tutors/yana.jpeg" alt="tutor" />
               </div>
-              <p class="tutors-card__name">Им’я Прізвище</p>
+              <p class="tutors-card__name">Яна</p>
               <div class="tutors-card__rate">
-                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-                ><i class="mentors__star fa-regular fa-star"></i>
+                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i>
               </div>
             </div>
             <div class="container">
               <div class="tutors-card__info">
                 <p class="tutors-card__description">
-                  Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ
+                  3 місяці викладання в N-Code
                 </p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
-                  <p>Назва курсу</p>
+                  <p>Front-End</p>
                   <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="tutors-card became-tutor">
-            <div class="tutors-card__img">
-              <img src="./img/add-ico-orange.svg" alt="" />
+          <div class="tutors-card">
+            <div class="tutors-card__top">
+              <div class="tutors-card__img">
+                <img src="img/tutors/olexiy.jpg" alt="tutor" />
+              </div>
+              <p class="tutors-card__name">Олексій</p>
+              <div class="tutors-card__rate">
+                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i>
+              </div>
             </div>
-            <p>Стати ментором</p>
+            <div class="container">
+              <div class="tutors-card__info">
+                <p class="tutors-card__description">
+                  Має 2,5 роки професійного досвіду роботи з - html5/css3/scss/js/ts/react/red...
+                </p>
+                <div class="tutors-card__course">
+                  <p>Курс:</p>
+                  <p>Front-End</p>
+                  <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <a class="btn" href="#callback-section">Записатись на пробне заняття</a>
@@ -574,17 +593,17 @@
             <div class="container">
               <div class="tutors-card__info">
                 <p class="tutors-card__description">
-                  Навчання в N-Code дуже сподобалось. Викладачі мають професійний підхід, дуже добре пояснюють матеріал...
+                  Навчання в N-Code дуже сподобалось. Викладачі мають професійний...
                 </p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
-                  <a class="tutors-card__course-link more-info-link" data-trigger="1">Відгук повністю</a>
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Викладач:</p>
                   <p>Михайло Великосельський</p>
                 </div>
+                <a class="tutors-card__course-link more-info-link" data-trigger="1">Відгук повністю</a>
               </div>
             </div>
           </div>
